ipc/ipdl/test/ipdl/ok/Delete.ipdl
include protocol "DeleteSub.ipdl";

sync protocol Delete {
    manages DeleteSub;

child:
    DeleteSub();
};
